# projeto

./: .gitignore  ANALISE_INPUTS_PERDAS.md  BUILD_EXE.md  BUILD_SUMMARY.md  Dockerfile  EXECUTAVEL_README.md  IMPLEMENTATION_NOTES.md  PROJECT_STATUS_FINAL.txt  QUESTAO_2_IMPLEMENTATION.md  QUESTAO_4_IMPLEMENTATION.md  QUESTAO_4_RECTANGULAR_CONDUCTORS.md  QUESTAO_5_IMPLEMENTATION.md  README.md  add_screenshots_to_docx.py  analyze_discrepancies.py  analyze_formula_mapping.py  build_exe.ps1  build_exe.sh  build_exe_cli.py  calc_2250A.py  calibrate_formula.py  capture_screenshots.py  compare_methods.py  convert_report_to_docx.py  debug_analytical.py  debug_approximate.py  debug_parameter_K.py  extract_pdf.py  final_validation.py  fix_q05_tests.py  fly.toml  generate_q4_figures.py  kaymak2016_extracted.txt  probe_biot_currents.py  probe_middle_hole.py  pyproject.toml  refine_parameter_mapping.py  requirements.txt  run_app.bat  run_app.ps1  (+16 more)
.github/workflows/: deploy-cloudflare-workers.yml
app/: __init__.py  main.py
app/components/: __init__.py  geometry_plot.py
app/core/: __init__.py
app/core/electromagnetics/: __init__.py  biot_savart.py  diffusion_equation.py  losses.py  rectangular_conductors.py  sheet_conductors.py  units.py
app/core/exercises/: __init__.py  q01_tank_losses.py  q02_analytical_solutions.py  q04_rectangular_conductors.py  q05_comparison_methods.py
app/core/geometry/: __init__.py  mesh.py  plate.py  validation.py
app/pages/: __init__.py  presentation.py  q2_tab.py  q3_tab.py
app/schemas/: __init__.py  defaults.py  inputs.py  outputs.py
app/services/: __init__.py
app/tabs/: __init__.py  presentation.py  q1_tab.py  q3_tab.py  q4_tab.py  q5_tab.py
cloudflare/: wrangler.toml
cloudflare/public/: index.html
cloudflare/src/: worker.js
tests/: test_ex01_temperature_measurements.py  test_geometry.py  test_pydantic_models.py  test_q01_integration.py  test_q02_analytical.py  test_q04_rectangular.py  test_q05_comparison.py
