[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eletromag-lab"
version = "0.1.0"
description = "Interactive electromagnetic lab for visual problem-solving in Brazilian physics education"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Renan", email = "renan@example.com"},
]
license = {text = "MIT"}

dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pydantic>=2.5.0",
    "shapely>=2.0.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "mypy>=1.7.0",
    "types-setuptools>=69.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages]
find = {where = ["."]}

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "PIE",      # flake8-pie
]
ignore = ["E501", "F841"]  # line too long (handled by black), unused variables (intentional placeholders)

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
